# nix-anynode

./: Cargo.toml  LICENSE  README.md  data.nix  flake.nix  node.nix
.github/workflows/: generate.yml  update.yml
src/: client.rs  main.rs  nix.rs  shasums.rs
templates/: data.nix.template
