[package]
name = "nix-anynode"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = "0.14"
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
futures-lite = "2.6.1"
lazy_static = "1.5.0"
reqwest = "0.12.26"
scraper = "0.25.0"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
